# hrdf-parser

./: Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
src/: error.rs  hrdf.rs  lib.rs  models.rs  parsing.rs  storage.rs  utils.rs
src/parsing/: attribute_parser.rs  bit_field_parser.rs  direction_parser.rs  error.rs  exchange_administration_parser.rs  exchange_journey_parser.rs  exchange_line_parser.rs  exchange_trip_parser.rs  helpers.rs  holiday_parser.rs  information_text_parser.rs  journey_parser.rs  line_parser.rs  platform_parser.rs  stop_connection_parser.rs  stop_parser.rs  through_service_parser.rs  timetable_metadata_parser.rs  transport_company_parser.rs  transport_type_parser.rs  trip_parser.rs
