[package]
name = "hrdf-parser"
version = "0.5.1"
authors = ["Florian Burgener"]
edition = "2024"
description = "This library is dedicated to the parsing of the HRDF format. For the moment, it can only parse the Swiss version of the HRDF format."
repository = "https://github.com/florianburgener/hrdf-parser"
license-file = "LICENSE"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
regex = "1.11.1"
reqwest = "0.12.22"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
strum = "0.27.2"
strum_macros = "0.27.2"
test-log = "0.2.18"
tokio = { version = "1.47.0", features = ["macros"] }
url = "2.5.4"
zip = "5.0.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
flate2 = "1.0.35"
# For -Zminimal-versions
native-tls = "0.2.14"
pretty_assertions = "1.4.1"
serde_json = "1.0.141"
zip = "5.0.1"

[profile.dev]
opt-level = 3

